=== 1.0.2 / 2016-05-12

* Trying to fix problem Uninitialized constant #<Module:0x000000028db358>::DRb (NameError) using ::Drb
* Set YDIM_VERSION to YDIM::Html::VERSION instead of (non existing commit-id)
* Added example_site/install_needed_sw.sh

=== 1.0.1 / 2016-05-10

* Updated to use Ruby 2.3.0
* Use UTF-8

=== 1.0.0 / 2010-12-20

* 1 major enhancement

  * Birthday!
