@@ -1,0 +1,26 @@
+<IfDefine RUBY>
+LoadModule ruby_module /usr/lib64/apache2/modules/mod_ruby.so
+# LoadModule ruby_module /usr/lib64/apache2/modules/mod_ruby193-p547.so
+# LoadModule ruby_module /usr/lib64/apache2/modules/mod_ruby193.so
+# LoadModule ruby_module /usr/lib64/apache2/modules/mod_ruby219.so
+
+# RubyRequire apache/ruby-debug
+RubyRequire apache/ruby-run
+
+# exec files under /ruby as ruby scripts.
+<Location /ruby>
+	SetHandler ruby-object
+	RubyHandler Apache::RubyRun.instance
+	Options ExecCGI
+</Location>
+
+# exec *.rbx as ruby scripts.
+<Files *.rbx>
+	SetHandler ruby-object
+	RubyHandler Apache::RubyRun.instance
+#	RubyHandler Apache::RubyDebug.instance
+</Files>
+
+</IfDefine>
+
+# vim: ts=4 filetype=apache
