@@ -1,0 +1,40 @@
+<Directory /var/www/ydim.ywesee.com/doc>
+Options ExecCGI
+AllowOverride None
+Order allow,deny
+Allow from all
+SSLRequireSSL
+ErrorDocument 403 https://ydim.oddb-ci2.dyndns.org
+</Directory>
+
+<VirtualHost 172.25.1.75:443>
+DocumentRoot /var/www/ydim.ywesee.com/doc
+ServerName ydim.oddb-ci2.dyndns.org
+DirectoryIndex index.rbx
+RubyAddPath /var/www/ydim.ywesee.com/
+RubyAddPath /usr/local/lib64/ruby/gems/1.9.1/gems/sbsm-1.2.3/lib
+RubyAddPath /usr/local/lib64/ruby/gems/1.9.1/gems/rclconf-1.0.0/lib
+#RubyRequire 'apache/ruby-debug'
+RubyRequire 'sbsm/trans_handler'
+SetHandler ruby-object
+RubyTransHandler SBSM::TransHandler.instance
+ErrorLog "|/usr/sbin/cronolog -l /var/www/ydim.ywesee.com/log/error_log /var/www/ydim.ywesee.com/log/%Y/%m/%d/error_log"
+CustomLog "|/usr/sbin/cronolog -l /var/www/ydim.ywesee.com/log/access_log /var/www/ydim.ywesee.com/log/%Y/%m/%d/access_log" combined
+SSLEngine on
+SSLCertificateFile /etc/ssl/apache2/server.crt
+SSLCertificateKeyFile /etc/ssl/apache2/server.key
+</VirtualHost>
+
+## webalizer
+<Directory "/var/www/ydim.ywesee.com/webalizer">
+Options None
+AllowOverride None
+Order allow,deny
+Allow from all
+</Directory>
+
+<VirtualHost *:80>
+DocumentRoot /var/www/ydim.ywesee.com/webalizer
+ServerName webalizer.ydim.ywesee.com
+DirectoryIndex index.html
+</VirtualHost>
