@@ -1,0 +1,5 @@
+#!/bin/sh
+exec 2>&1
+ulimit -v 10240000
+cd /var/www/ydim.ywesee.com/
+exec sudo -u apache /usr/local/bin/ruby231 bin/ydim-htmld
