@@ -1,0 +1,5 @@
+#!/bin/sh
+exec 2>&1
+ulimit -v 10240000
+cd /home/niklaus/git/ydim
+exec sudo -u apache /usr/local/bin/ydimd
