@@ -1,5 +1,6 @@
 === 1.0.2 / 2016-05-12
 
+* Added example_site and explanation in readme.md on how to setup ydim-html
 * Trying to fix problem Uninitialized constant #<Module:0x000000028db358>::DRb (NameError) using ::Drb
 * Set YDIM_VERSION to YDIM::Html::VERSION instead of (non existing commit-id)
 * Added example_site/install_needed_sw.sh
